--- a/commons/src/main/res/layout/dialog_bottom_title_zone_with_dismiss_button.xml
+++ b/commons/src/main/res/layout/dialog_bottom_title_zone_with_dismiss_button.xml
@@ -24,16 +24,16 @@
         android:clickable="true"
         android:focusable="true"
         android:padding="12dp"
-        android:src="@drawable/ic_cross"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_cross" />
     <!--    <ImageView-->
     <!--        android:id="@+id/dialog_bottom_dismiss_button"-->
     <!--        android:layout_width="0dp"-->
     <!--        android:layout_height="0dp"-->
     <!--        app:layout_constraintDimensionRatio="1:1"-->
-    <!--        android:src="@drawable/ic_cross"-->
+    <!--        app:srcCompat="@drawable/ic_cross"-->
     <!--        android:background="?attr/selectableItemBackground"-->
     <!--        android:clickable="true"-->
     <!--        android:padding="12dp"-->
