--- a/screens/src/main/res/layout/activity_screen.xml
+++ b/screens/src/main/res/layout/activity_screen.xml
@@ -26,6 +26,7 @@
         app:menu="@menu/bottom_nav_menu" />
 
     <include
+        android:id="@+id/loading_layout"
         layout="@layout/layout_loading"
         android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
