--- a/settings/src/main/res/layout/activity_settings.xml
+++ b/settings/src/main/res/layout/activity_settings.xml
@@ -22,6 +22,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <include
+        android:id="@+id/loading_layout"
         layout="@layout/layout_loading"
         android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
