--- a/screens/src/main/res/drawable/topbar_button_cards_list.xml
+++ b/screens/src/main/res/drawable/topbar_button_cards_list.xml
@@ -15,27 +15,27 @@
   ~     along with Everyday.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt"
-    android:viewportWidth="48"
-    android:viewportHeight="48"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="48dp"
-    android:height="48dp">
+    android:height="48dp"
+    android:viewportWidth="48"
+    android:viewportHeight="48">
     <path
-        android:pathData="M20.7 11.2V12.2H22.2V11.2C22.2 10.3 22.8 9.6 23.7 9.6H34.2C35 9.6 35.7 10.3 35.7 11.2V26.9C35.7 27.7 35 28.4 34.2 28.4H33.1V30H34.2C35.9 30 37.2 28.6 37.2 26.9V11.2C37.2 9.4 35.9 8 34.2 8H23.7C22 8 20.7 9.4 20.7 11.2Z"
-        android:fillColor="?attr/colorOnPrimary"/>
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M20.7 11.2V12.2H22.2V11.2C22.2 10.3 22.8 9.6 23.7 9.6H34.2C35 9.6 35.7 10.3 35.7 11.2V26.9C35.7 27.7 35 28.4 34.2 28.4H33.1V30H34.2C35.9 30 37.2 28.6 37.2 26.9V11.2C37.2 9.4 35.9 8 34.2 8H23.7C22 8 20.7 9.4 20.7 11.2Z" />
     <path
-        android:pathData="M15.8 16.2V17.2H17.3V16.2C17.3 15.3 18 14.6 18.8 14.6H29.4C30.2 14.6 30.9 15.3 30.9 16.2V31.8C30.9 32.7 30.2 33.4 29.4 33.4H28.2V35H29.4C31 35 32.4 33.6 32.4 31.8V16.2C32.4 14.4 31 13 29.4 13H18.8C17.2 13 15.8 14.4 15.8 16.2Z"
-        android:fillColor="?attr/colorOnPrimary" />
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M15.8 16.2V17.2H17.3V16.2C17.3 15.3 18 14.6 18.8 14.6H29.4C30.2 14.6 30.9 15.3 30.9 16.2V31.8C30.9 32.7 30.2 33.4 29.4 33.4H28.2V35H29.4C31 35 32.4 33.6 32.4 31.8V16.2C32.4 14.4 31 13 29.4 13H18.8C17.2 13 15.8 14.4 15.8 16.2Z" />
     <path
-        android:pathData="M27.6 35.3L27.6 36.9C27.6 38.6 26.2 40 24.5 40L14 40C12.3 40 11 38.6 11 36.9L11 21.1C11 19.4 12.3 18 14 18L15.5 18L17 18L24.5 18C26.2 18 27.6 19.4 27.6 21.1L27.6 33.7L27.6 35.3ZM26 21.1C26 20.2 25.4 19.5 24.5 19.5L14 19.5C13.2 19.5 12.5 20.2 12.5 21.1L12.5 36.9C12.5 37.7 13.2 38.4 14 38.4L24.5 38.4C25.4 38.4 26 37.7 26 36.9L26 21.1Z"
-        android:fillColor="?attr/colorOnPrimary" />
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M27.6 35.3L27.6 36.9C27.6 38.6 26.2 40 24.5 40L14 40C12.3 40 11 38.6 11 36.9L11 21.1C11 19.4 12.3 18 14 18L15.5 18L17 18L24.5 18C26.2 18 27.6 19.4 27.6 21.1L27.6 33.7L27.6 35.3ZM26 21.1C26 20.2 25.4 19.5 24.5 19.5L14 19.5C13.2 19.5 12.5 20.2 12.5 21.1L12.5 36.9C12.5 37.7 13.2 38.4 14 38.4L24.5 38.4C25.4 38.4 26 37.7 26 36.9L26 21.1Z" />
     <path
-        android:pathData="M19.3 29.8C17.4 29.8 15.9 28.2 15.9 26.2C15.9 24.3 17.4 22.7 19.3 22.7C21.1 22.7 22.7 24.3 22.7 26.2C22.7 28.2 21.1 29.8 19.3 29.8ZM21.2 26.2C21.2 25.1 20.3 24.3 19.3 24.3C18.2 24.3 17.4 25.1 17.4 26.2C17.4 27.3 18.2 28.2 19.3 28.2C20.3 28.2 21.2 27.3 21.2 26.2Z"
-        android:fillColor="?attr/colorOnPrimary" />
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M19.3 29.8C17.4 29.8 15.9 28.2 15.9 26.2C15.9 24.3 17.4 22.7 19.3 22.7C21.1 22.7 22.7 24.3 22.7 26.2C22.7 28.2 21.1 29.8 19.3 29.8ZM21.2 26.2C21.2 25.1 20.3 24.3 19.3 24.3C18.2 24.3 17.4 25.1 17.4 26.2C17.4 27.3 18.2 28.2 19.3 28.2C20.3 28.2 21.2 27.3 21.2 26.2Z" />
     <path
-        android:pathData="M15.5 32.9C15.1 32.9 14.8 32.6 14.8 32.1 14.8 31.7 15.1 31.3 15.5 31.3H23C23.5 31.3 23.8 31.7 23.8 32.1 23.8 32.6 23.5 32.9 23 32.9H15.5Z"
-        android:fillColor="?attr/colorOnPrimary" />
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M15.5 32.9C15.1 32.9 14.8 32.6 14.8 32.1 14.8 31.7 15.1 31.3 15.5 31.3H23C23.5 31.3 23.8 31.7 23.8 32.1 23.8 32.6 23.5 32.9 23 32.9H15.5Z" />
     <path
-        android:pathData="M17.4 36.1C17 36.1 16.6 35.7 16.6 35.3 16.6 34.8 17 34.5 17.4 34.5H21.2C21.6 34.5 21.9 34.8 21.9 35.3 21.9 35.7 21.6 36.1 21.2 36.1H17.4Z"
-        android:fillColor="?attr/colorOnPrimary" />
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M17.4 36.1C17 36.1 16.6 35.7 16.6 35.3 16.6 34.8 17 34.5 17.4 34.5H21.2C21.6 34.5 21.9 34.8 21.9 35.3 21.9 35.7 21.6 36.1 21.2 36.1H17.4Z" />
 </vector>
