--- a/screens/src/main/res/navigation/mobile_navigation.xml
+++ b/screens/src/main/res/navigation/mobile_navigation.xml
@@ -25,24 +25,24 @@
         android:id="@+id/navigation_home"
         android:name="fr.shining_cat.everyday.screens.views.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/home_fragment" />
+        tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_sessions"
         android:name="fr.shining_cat.everyday.screens.views.sessions.SessionsFragment"
         android:label="@string/title_sessions"
-        tools:layout="@layout/sessions_fragment" />
+        tools:layout="@layout/fragment_sessions" />
 
     <fragment
         android:id="@+id/navigation_statistics"
         android:name="fr.shining_cat.everyday.screens.views.statistics.StatisticsFragment"
         android:label="@string/title_statistics"
-        tools:layout="@layout/statistics_fragment" />
+        tools:layout="@layout/fragment_statistics" />
 
     <fragment
         android:id="@+id/navigation_rewards"
         android:name="fr.shining_cat.everyday.screens.views.rewards.RewardsFragment"
         android:label="@string/title_rewards"
-        tools:layout="@layout/rewards_fragment" />
+        tools:layout="@layout/fragment_rewards" />
 
 </navigation>
