--- a/screens/src/main/res/layout/item_timed_session_preset_view_holder.xml
+++ b/screens/src/main/res/layout/item_timed_session_preset_view_holder.xml
@@ -1,10 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+    ~ Copyright (c) 2021. Shining-cat - Shiva Bernhard
+    ~ This file is part of Everyday.
+    ~
+    ~     Everyday is free software: you can redistribute it and/or modify
+    ~     it under the terms of the GNU General Public License as published by
+    ~     the Free Software Foundation, version 3 of the License.
+    ~
+    ~     Everyday is distributed in the hope that it will be useful,
+    ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
+    ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    ~     GNU General Public License for more details.
+    ~
+    ~     You should have received a copy of the GNU General Public License
+    ~     along with Everyday.  If not, see <https://www.gnu.org/licenses/>.
+    -->
+
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/colorSurface">
+    android:background="?attr/colorSurface"
+    app:strokeColor="?attr/colorPrimary"
+    app:strokeWidth="1dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -30,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             android:layout_marginTop="@dimen/medium_space"
-            android:layout_marginEnd="0dp"
+            android:layout_marginEnd="@dimen/space_xxs"
             android:layout_marginBottom="@dimen/space_xl"
             android:ellipsize="end"
             android:text="@string/duration"
@@ -40,6 +58,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/timed_session_duration_value"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/timed_session_preset_item_title" />
 
@@ -47,7 +66,7 @@
             android:id="@+id/timed_session_duration_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_xs"
+            android:layout_marginStart="@dimen/space_xxs"
             android:layout_marginTop="@dimen/medium_space"
             android:layout_marginEnd="0dp"
             android:ellipsize="end"
@@ -55,19 +74,28 @@
             android:textColor="?attr/colorOnSurface"
             android:textSize="@dimen/normal_text_size"
             app:layout_constraintBottom_toBottomOf="@id/timed_session_duration_label"
-            app:layout_constraintEnd_toStartOf="@id/timed_session_interval_label"
+            app:layout_constraintEnd_toStartOf="@id/guideline_middle"
             app:layout_constraintStart_toEndOf="@id/timed_session_duration_label"
             app:layout_constraintTop_toBottomOf="@id/timed_session_preset_item_title"
             tools:text="15mn 30s" />
 
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_middle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintGuide_percent="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <TextView
             android:id="@+id/timed_session_interval_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/medium_space"
+            android:layout_marginStart="0dp"
             android:layout_marginTop="@dimen/medium_space"
-            android:layout_marginEnd="0dp"
+            android:layout_marginEnd="@dimen/space_xxs"
             android:ellipsize="end"
             android:text="@string/interval"
             android:textAlignment="center"
@@ -76,14 +104,15 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/timed_session_duration_label"
             app:layout_constraintEnd_toStartOf="@id/timed_session_interval_value"
-            app:layout_constraintStart_toEndOf="@id/timed_session_duration_value"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toEndOf="@id/guideline_middle"
             app:layout_constraintTop_toBottomOf="@id/timed_session_preset_item_title" />
 
         <TextView
             android:id="@+id/timed_session_interval_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_xs"
+            android:layout_marginStart="@dimen/space_xxs"
             android:layout_marginTop="@dimen/medium_space"
             android:layout_marginEnd="0dp"
             android:ellipsize="end"
